test/analyzer/input_programs/invalid_programs/program32.tea
a := class:
  b: class:
    c: class:
      d: class:
        e: 3
      end
    end
  end
end

# valid
(((a.b).c).d).e + 5

# invalid
(((a.b).c).d).f